fixed white space at bottom

--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -64,7 +64,7 @@ text-align: center;
 justify-content: center;
 flex-direction: row;
 width: 400px;
-margin-bottom: 400px;
+margin-bottom: 1000px;
 justify-content: space-between;}
 
 
